--- a/Unit_6/index.html
+++ b/Unit_6/index.html
@@ -10,21 +10,20 @@
 		</header> 
 	</div>
 	<h1>"Crazy Rachel"</h1>
-	<section>
-		<aside class="picture">
-		<p> ASIDE </p>
-		<p> Lorem Ipsum...</p>
+	<section id="two column" class="clearfix">
+		<aside id="left">
+			<p>ASIDE </p>
+			<p>Lorem Ipsum...</p>
 		</aside>
 		<nav>
 			
 		</nav>
-		<article class="description">
+		<article id="right">
 			<p> ARTICLE</p>
-			<p> Lorem Ipsum...</p>
-			<p> Lorem Ipsum...</p>
+			<p> Lorem Ipsum</p>
+			<p> Lorem Ipsum</p>
 		</article> 
 	</section>
-	
 	<p> "Take a ride on the wild side"</p>
 	<img src="http://img.xcitefun.net/users/2015/01/371224,xcitefun-animals-moon-7.jpg" alt="">
 	<p>"A place where everyone can feel completely free to express their inner crazy. Crazy Rachel is a website dedicated to the wild, wonderful and wacky."</p>
